Slider OK + refactorizar con GSAP contenido repetido en front page

--- a/site/web/app/themes/sage/resources/css/app.css
+++ b/site/web/app/themes/sage/resources/css/app.css
@@ -160,6 +160,7 @@
 @import './layouts/single-product.css';
 @import './layouts/single-variable-product.css';
 @import './layouts/blocks.css';
+@import './layouts/slider.css';
 @import './componentes/select.css';
 @import './componentes/lightgallery.css';
 @import '@glidejs/glide/dist/css/glide.core.min.css';
