--- a/site/web/app/themes/sage/resources/css/layouts/slider.css
+++ b/site/web/app/themes/sage/resources/css/layouts/slider.css
@@ -1,5 +1,5 @@
 .glide {
-  &__arrow {
+  .glide__arrow {
     position: absolute;
     display: block;
     top: 0;
@@ -16,22 +16,22 @@
       opacity: 1;
     }
 
-    &--left {
+    .glide__arrow--left {
       left: 0;
       text-align: right;
     }
 
-    &--right {
+    .glide__arrow--right {
       right: 0;
       text-align: left;
     }
 
-    &--disabled {
+    .glide__arrow--disabled {
       opacity: 0.33;
     }
   }
 
-  &__bullets {
+  .glide__bullets {
     position: absolute;
     z-index: 2;
     bottom: 2em;
@@ -74,7 +74,7 @@
     }
   }
 
-  &__bullet {
+  .glide__bullet {
     background-color: #fff;
     width: 1rem;
     height: 1rem;
@@ -89,21 +89,21 @@
     }
 
     &:hover {
-      /* background-color: theme('colors.allo'); */
+      @apply bg-allo;
     }
 
-    &--active {
+    &.glide__bullet--active {
       .cruz-wrap {
         display: block;
       }
     }
   }
 
-  &--swipeable {
+  .glide--swipeable {
     cursor: grab;
   }
 
-  &--dragging {
+  .glide--dragging {
     cursor: grabbing;
   }
 
