--- a/site/web/app/themes/sage/resources/css/app.css
+++ b/site/web/app/themes/sage/resources/css/app.css
@@ -152,6 +152,7 @@
 @import './layouts/header.css';
 @import './layouts/front-page.css';
 @import './layouts/slider.css';
+@import './layouts/select.css';
 @import './layouts/artists.css';
 @import './layouts/shop.css';
 @import './layouts/cart.css';
