--- a/site/web/app/themes/sage/resources/css/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/css/layouts/cart.css
@@ -1,191 +1,185 @@
-body.cart {
-  .ticket-head {
-    .ticket-triangulo {
-      height: 30px;
+@layer components {
+  .woocommerce-cart {
+    table {
+      &.shop_table {
+        @apply text-sm table-fixed w-full font-sans;
+
+        thead {
+          @apply hidden md:table-header-group;
+
+          th {
+            @apply py-3 border-b-2 border-negro-fb;
+
+            &.product-remove {
+              @apply w-12;
+            }
+
+            &.product-name {
+              width: 30%;
+            }
+
+            &.product-price,
+            &.product-subtotal {
+              width: 15%;
+            }
+
+            &.product-quantity {
+              width: 10%;
+            }
+          }
+        }
+
+        tbody {
+          tr {
+            th {
+              @apply bg-white pl-4;
+            }
+            td {
+              @apply block md:table-cell border-b border-gray-200 py-3 md:py-8 px-3 bg-white;
+
+              &::before {
+                content: attr(data-title);
+                @apply mb-1 block font-semibold text-negro-fb md:hidden;
+              }
+
+              &.product-remove {
+                @apply text-right md:text-center text-3xl;
+
+                & a {
+                  @apply !text-rojo hover:!text-azul;
+                }
+              }
+
+              /* &.product-thumbnail img {
+                @apply mx-auto max-w-[100px] md:max-w-[80px];
+              } */
+
+              /* &.product-name a {
+                @apply font-medium !text-black;
+              } */
+
+              &.product-price {
+                @apply text-negro-fb;
+              }
+
+              &.product-subtotal {
+                @apply text-negro-fb mb-6 font-bold text-xl;
+              }
+
+              &.product-quantity {
+                @apply pt-3;
+
+                input.qty {
+                  @apply border w-full py-2 text-2xl border-gray-300 text-center;
+                }
+              }
+
+              &.actions {
+                @apply px-8 text-center;
+
+                .coupon {
+                  @apply mb-6;
+
+                  label {
+                    @apply sr-only;
+                  }
+
+                  input[name='coupon_code'] {
+                    @apply w-full bg-gray-200 px-4 py-4 text-center mb-1 text-negro-fb text-2xl placeholder:text-white;
+                  }
+
+                  button[name='apply_coupon'] {
+                    @apply w-full border-negro-fb border px-4 pb-2 pt-3 text-negro-fb hover:bg-allo hover:text-negro-fb uppercase;
+                  }
+                }
+
+                button[name='update_cart'] {
+                  @apply border-negro-fb border px-4 pb-2 pt-3 text-negro-fb hover:bg-allo hover:text-negro-fb uppercase;
+                }
+              }
+            }
+          }
+        }
+      }
     }
-  }
 
-  .product-remove svg {
-    @apply fill-rojo;
-  }
-  .cart-collaterals {
-    .cart_totals {
-      h2 {
-        @apply text-2xl text-center mb-6;
-      }
+    .cart-collaterals {
+      @apply w-full mt-8 pt-8;
 
-      .checkout-button {
-        color: #fff;
-      }
+      .cart_totals {
+        @apply w-full;
 
-      .woocommerce-shipping-calculator {
+        h2 {
+          @apply font-bold mb-6;
+        }
+
+        table.shop_table {
+          @apply block md:table w-full text-sm border-t border-gray-300;
+
+          tbody {
+            @apply block md:table-row-group w-full;
+          }
+
+          tr {
+            @apply block md:table-row border-b border-gray-200;
+
+            th {
+              @apply hidden md:table-cell py-4 pr-4 text-left font-medium text-negro-fb w-full md:w-1/3;
+            }
+
+            td {
+              @apply py-4 text-lg font-semibold text-negro-fb;
+            }
+
+            &.order-total td {
+              @apply text-2xl font-bold text-negro-fb;
+            }
+          }
+        }
+
+        .woocommerce-shipping-destination {
+          @apply mt-2 text-sm text-gray-600;
+        }
+
         .shipping-calculator-button {
-          @apply inline-block px-4 py-2 my-6 bg-white border-2 border-black uppercase text-xs tracking-widest;
+          @apply block w-full border-negro-fb border px-4 py-2 !text-negro-fb hover:bg-allo uppercase text-sm mt-9 text-center font-normal;
         }
 
         .shipping-calculator-form {
-          margin-top: 1rem;
-        }
+          @apply mt-6 grid gap-4;
 
-        input[type='text'] {
-          @apply px-4 py-2 mb-4;
-        }
-      }
-    }
-  }
+          label {
+            @apply block mb-1 font-semibold text-sm text-negro-fb;
+          }
 
-  .woocommerce-customer-details {
-    @apply p-6;
-  }
+          select,
+          input[type='text'] {
+            @apply w-full border border-gris-fb rounded px-3 py-2 text-negro-fb;
+          }
 
-  .select2-dropdown {
-    border: none !important;
+          p.form-row {
+            @apply mb-4;
+          }
 
-    li {
-      padding: 0.8rem 1.5rem;
-    }
-  }
-
-  .select2-container--default {
-    width: 100% !important;
-
-    .select2-selection {
-      box-shadow: 0;
-      background-color: #fff;
-      border: 0;
-      border-radius: 0;
-      outline: 0;
-      min-height: 3rem;
-      text-align: left;
-      margin-bottom: 1rem;
-
-      .select2-selection__rendered,
-      .select2-selection__arrow {
-        display: block;
-        padding: 0.8rem 1.5rem;
-      }
-
-      .select2-selection__arrow {
-        margin-top: 0.5rem;
-      }
-    }
-
-    .select2-results__option--highlighted[aria-selected],
-    .select2-results__option--highlighted[data-selected] {
-      background-color: #ffff00;
-      color: #000000;
-    }
-  }
-
-  .ticket {
-    .tk-row {
-      .product-remove {
-        width: 90px;
-        padding: 14px;
-      }
-
-      .tk-cell {
-        &.product-thumbnail {
-          align-self: flex-start;
-          flex-grow: 0;
-          flex-shrink: 0;
-
-          a {
-            img {
-              max-width: 7rem;
-              max-height: 7rem;
-              width: auto;
-              height: auto;
-            }
+          button[name='calc_shipping'] {
+            @apply border-negro-fb border px-4 py-2 !text-negro-fb hover:bg-allo hover:text-negro-fb uppercase text-sm text-center font-normal;
           }
         }
 
-        &.product-subtotal {
-          .woocommerce-Price-currencySymbol {
-            margin-left: 0.3em;
-          }
-        }
+        .wc-proceed-to-checkout {
+          @apply mt-8 flex justify-center;
 
-        &.product-quantity {
-          .quantity {
-            height: 100%;
-            width: 4em;
-          }
-
-          input[type='number'] {
-            appearance: textfield;
-            width: 100%;
-            display: block;
-            padding: 1em;
-            -moz-appearance: textfield;
-            appearance: textfield;
-
-            &::-webkit-inner-spin-button,
-            &::-webkit-outer-spin-button {
-              -webkit-appearance: none;
-              margin: 0;
-            }
-          }
-        }
-
-        &.actions {
-          .coupon {
-            .central {
-              width: 20rem;
-            }
-
-            .lateral {
-              width: calc(50% - 10rem);
-            }
-          }
-        }
-      }
-
-      @media (width < 786px) {
-        .tk-cell {
-          &.product-thumbnail {
-            flex-grow: 0;
-            flex-shrink: 0;
-
-            a img {
-              max-width: 10rem;
-              max-height: 10rem;
-            }
-          }
-
-          &.product-data {
-            flex-grow: 0;
-            flex-shrink: 0;
-          }
-
-          &.product-subtotal {
-            flex-grow: 0;
-            flex-shrink: 0;
+          a.checkout-button {
+            @apply block text-center bg-azul !text-white uppercase px-6 py-4 rounded hover:bg-allo hover:!text-negro-fb tracking-wider w-64 leading-5 text-base;
+            clip-path: ellipse(50% 50% at 50% 50%);
           }
         }
       }
     }
-  }
 
-  .cart_totals {
-    .subt-tabla {
-      max-width: 20rem;
+    input[name='calc_shipping_city'],
+    input[name='calc_shipping_postcode'] {
+      @apply text-base !rounded-none;
     }
-  }
-
-  .woocommerce-shipping-calculator button[name='calc_shipping'] {
-    @apply inline-block px-4 py-2 my-6 bg-white border-2 border-black uppercase text-xs tracking-widest;
-  }
-
-  #calc_shipping_country_field {
-    padding-right: 1rem;
-  }
-
-  #calc_shipping_country,
-  #calc_shipping_state {
-    background-color: white;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    width: 100%;
   }
 }
