--- a/site/web/app/themes/sage/resources/css/layouts/cart.css
+++ b/site/web/app/themes/sage/resources/css/layouts/cart.css
@@ -118,7 +118,7 @@
           }
 
           tr {
-            @apply block md:table-row border-b border-gray-200;
+            @apply block md:table-row border-b border-gray-300;
 
             th {
               @apply hidden md:table-cell py-4 pr-4 text-left font-medium text-negro-fb w-full md:w-1/3;
@@ -156,7 +156,7 @@
 
           select,
           input[type='text'] {
-            @apply w-full border border-gris-fb rounded px-3 py-2 text-negro-fb;
+            @apply w-full border border-gris-claro-fb rounded px-3 py-2 text-negro-fb;
           }
 
           p.form-row {
