Checkout: cupón CSS y estado global focus

--- a/site/web/app/themes/sage/resources/css/common/global.css
+++ b/site/web/app/themes/sage/resources/css/common/global.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+:focus {
+  @apply outline-2 outline-gris-fb outline-offset-8;
+}
+
 .main,
 .site-main {
   a {
