--- a/site/web/app/themes/sage/resources/css/app.css
+++ b/site/web/app/themes/sage/resources/css/app.css
@@ -93,12 +93,30 @@
 }
 
 @layer utilities {
-  .is-content-width > *:not(.alignwide):not(.alignfull) {
-    @apply max-w-[800px] mx-auto px-6 md:px-0;
+  /* El contenedor no limita el ancho */
+  .is-content-width {
+    @apply w-full;
   }
+
+  /* Por defecto, los bloques tienen un ancho máximo */
+  .is-content-width > *:not(.alignwide):not(.alignfull) {
+    @apply max-w-[800px] mx-auto;
+  }
+
+  /* alignwide: ancho intermedio */
+  .alignwide {
+    @apply max-w-[1200px] mx-auto;
+  }
+
+  /* alignfull: sin restricción */
+  .alignfull {
+    @apply w-full;
+  }
+
   .clip-path-elipse {
     clip-path: ellipse(50% 50% at 50% 50%);
   }
+
   .text-shadow {
     text-shadow: 0.1em 0.1em 0 #000;
   }
