CSS proceso de compra. Ajustes

--- a/site/web/app/themes/sage/resources/css/layouts/checkout.css
+++ b/site/web/app/themes/sage/resources/css/layouts/checkout.css
@@ -221,6 +221,14 @@ body.checkout {
           @apply border-t;
         }
       }
+
+      ul.wc-item-meta {
+        @apply pl-0;
+
+        li {
+          @apply !border-none;
+        }
+      }
     }
   }
 }
