Añadir control de margen a bloques en el editor

--- a/site/web/app/themes/sage/resources/css/common/typography.css
+++ b/site/web/app/themes/sage/resources/css/common/typography.css
@@ -23,7 +23,7 @@
   }
 
   p {
-    @apply text-base leading-relaxed text-negro-fb mb-4;
+    @apply text-base leading-tight text-negro-fb mb-4;
   }
 
   ul {
